--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -426,7 +426,7 @@ Three more examples:
 
 \item {Ellipses:} Roll a circle ${\cal C}$ twice through its circumference around the \emph{inside} of a circle with twice the radius and a point $P^*$ at rest in the reference frame of ${\cal C}$ to the rolling circle sweeps out an ellipse. When $P^*$ is on ${\cal C}$ it traces the diameter of the fixed circle twice.
 
-Figure ?? illustrates the arclength theorem in this case for an $(a, b, -2a)$ prolate hypocyloid (an ellipse), with major and minor semi-axes $b+a$ and $b-a$.
+Figure ?? illustrates the arclength theorem in this case for an $(a, b, -2a)$ prolate hypocyloid (an ellipse), with major and minor semi-axes $b+a$ and $b-a$. Here the same-side arclength of the ellipse exceeds its opposite-side length by $4a$, twice the diameter of the fixed circle.
 
 \begin{onlineOnly}
     \begin{center}
@@ -435,6 +435,18 @@ Figure ?? illustrates the arclength theorem in this case for an $(a, b, -2a)$ pr
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
+
+As Robinson points out, this gives a way to express the same-side and opposite-side lengths, respectively $\lambda$ and $\mu$, in terms of the ellipses's circumference $C$. For since
+\[
+      \lambda + \mu = C
+\] 
+and
+\[
+    \lambda - \mu = 4a ,
+\]
+\[
+     \lambda = \frac{1}{2}C + 2a \,\,  \text{ and } \,\, \mu =  \frac{1}{2}C - 2a .
+\]
 
 \end{enumerate}
 
