--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -250,11 +250,11 @@ To prove (c), we borrow an idea from Tabachnikov's \emph{Geometry and Billiards}
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{i2050p22ud}{900}{600}      %xvwr9mhuvw
+\desmos{ffj1pwg96n}{900}{600}         %xvwr9mhuvw
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/i2050p22ud}{Cylcoids Proof of Theorem 1BB}
+\href{https://www.desmos.com/calculator/ffj1pwg96n}{Cylcoids Proof of Theorem 1CC} %i2050p22ud
 
 %i2050p22ud
 
