--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -171,6 +171,56 @@ c. Move along the axis of symmetry to the point with $y$-coordinate $y=1/(2a)$.
 d. Move to the $x$-axis, along the lines with slopes $\pm \sqrt{b^2-4ac}$, thereby landing at the intercepts.
 
 
+\section{Math Department}
+
+Is the quadratic formula dimensionally correct?
+
+
+For example, suppose the coordinates $x$, $y$ are measured in meters for the parabola 
+\[
+     y  = ax^2 + bx + c \, , \, c\neq 0.
+\]
+
+\begin{enumerate}
+\item What are the units of $c$, $b$, $a$?
+
+\item Give geometric interpretations of $c$, $b$, $a$.
+
+\item What are the units of $-b/2a$? Interpet its meaning.
+
+\item What are the units of 
+\[
+     \frac{\sqrt{b^2-4ac}}{2a}?
+\]
+Interpet its meaning.
+
+\end{enumerate}
+
+\begin{exploration}\label{exp:cq1}
+Drag the slider $b$ to move the parabola $y=ax^2 +bx+c$ and check that the length of segment $AB$ remains unchanged. Also drag the sliders $a$ and $c$ and watch what changes and what remains the same.
+ 
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/2apdkp8rwe}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{2apdkp8rwe}{450}{600} \desmos{1kxcom3p2t}{450}{600}
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+
+\href{https://www.desmos.com/calculator/1kxcom3p2t}{Calculus and the Quadratic Formula 2}
+
+
+
+
+
+\section{Cylindder}
+
 
 \begin{exploration}\label{exp:orth1}
 Cylinder
