--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -207,13 +207,13 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{2apdkp8rwe}{450}{600} \desmos{1kxcom3p2t}{450}{600}
+\desmos{1kxcom3p2t}{450}{600} \desmos{1kxcom3p2t}{450}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
 
 
-\href{https://www.desmos.com/calculator/1kxcom3p2t}{Calculus and the Quadratic Formula 2}
+\href{https://www.desmos.com/calculator/1kxcom3p2t}{Calculus and the Quadratic Formula 22}
 
 
 
