--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -186,7 +186,23 @@ For example, suppose the coordinates $x$, $y$ are measured in meters for the par
 
 \item Give geometric interpretations of $c$, $b$, $a$.
 
-\item What are the units of $-b/2a$? Interpet its meaning.
+\item What are the units of $-b/2a$? 
+
+\item Interpret the meaning of the first term
+\[
+  \Delta x = - \frac{b}{2a}
+\]
+of the quadratic formula.
+
+\begin{hint}
+The normal line to the parabola at $(0,b)$ has slope $m_\perp = -1/b$. 
+
+The first term records the change 
+\[
+        \Delta x =  \left( \frac{1}{m_\perp} \right) \Delta y = -b \left( \frac{1}{2a} \right)%\left( -\frac{1}{1/b} \right)
+\]
+in the $x$-coordindate moving along the normal line from the $y$-intercept to the axis of symmetry. 
+\end{hint}
 
 \item What are the units of 
 \[
