--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -194,7 +194,7 @@ For example, suppose the coordinates $x$, $y$ are measured in meters for the par
 \]
 of the quadratic formula.
 
-\begin{hint}
+\begin{expandable}
 The normal line to the parabola at $(0,b)$ has slope $m_\perp = -1/b$. 
 
 The first term records the change 
@@ -202,7 +202,7 @@ The first term records the change
         \Delta x =  \left( \frac{1}{m_\perp} \right) \Delta y = -b \left( \frac{1}{2a} \right)%\left( -\frac{1}{1/b} \right)
 \]
 in the $x$-coordindate moving along the normal line from the $y$-intercept to the axis of symmetry. 
-\end{hint}
+\end{expandable}
 
 \item What are the units of 
 \[
