--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -13,7 +13,7 @@ Relationship between their arclengths.
 \maketitle
  
 
-Roll a circle ${\cal C}_1$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out a \emph{general cylcoid}. When $P_1$ is a distance $b>a$ from the circle's center, the \emph{prolate} cylcoid (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds its length on the opposite side by the length of the \emph{ordinary} cycloid, the curve traced by a point $P_2$ fixed on the circumference of the same circle (see Figure 1, where ${\cal L}$ is the $x$-axis). 
+Roll a circle ${\cal C}_1$ once through its circumference on a line ${\cal L}$ and a point $P_1$ fixed in the reference frame of the circle sweeps out a \emph{general cylcoid}. When $P_1$ is a distance $b>a$ from the circle's center, the \emph{prolate cylcoid} (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the prolate cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds its length on the opposite side by the length of its \emph{sister} cycloid, the curve traced by a point $P_2$ fixed on the circumference of the same circle (see Figure 1, where ${\cal L}$ is the $x$-axis). 
 
 %Fix a point $P_1$ in the reference frame of a circle ${\cal C}_1$ of radius $a$ and roll the circle once through its circumference on a line ${\cal L}$. When $P_1$ is a distance $b>a$ from the circle's center, it sweeps out a curve called a \emph{prolate} cylcoid (from the Latin \emph{poferre}, to extend and the Greek \emph{kyklos}, circle) that crosses ${\cal L}$. In a recent article,  D. Robinson showed the length of the cycloid on the same side of ${\cal L}$ as ${\cal C}_1$ exceeds its length on the opposite side by the length of the \emph{ordinary} cycloid, the curve traced by a point $P_2$ fixed on the circumference of the same circle (see Figure 1). 
 
@@ -43,9 +43,9 @@ Roll a circle ${\cal C}_1$ once through its circumference on a line ${\cal L}$ a
 
 The purpose of this note is to give a geometric proof of this result and some of Robinson's other discoveries.  %this fact and view some of Robinson's other results in a broader context.
 
-Our first step in this direction is to look for a more general equality of arclengths by associating each point of a prolate cycloid above the $x$-axis with a point below. It seems like the simplest choice is to pair points with same inclination angle (the angle the curve makes with the horizontal) and experiments with desmos suggest the same equality of arclengths holds between any two inclination angles.
+Our first step in this direction was to look for a more general equality of arclengths by associating each point of a prolate cycloid above the $x$-axis with a point below. It seemed like the simplest choice was to pair points with same inclination angle (the angle a curve makes with the horizontal) and experiments with desmos suggested the same equality of arclengths holds between any two inclination angles.
 
-In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ of the prolate cycloid between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of the ordinary cycloid between these same angles. 
+In the figure below, for example, the difference $s_1 - s_2$ in the arclengths $A_1P_1$ and $A_2P_2$ of the prolate cycloid between indclination angles $0$ and $\phi$ equals the arclength $s_3$ of its sister cycloid between these same angles. 
 
 \begin{onlineOnly}
     \begin{center}
@@ -67,29 +67,29 @@ You can almost see the equality of arclengths in the figure below by looking at 
 
 \href{https://www.desmos.com/calculator/yqw8ektvps}{Cylcoid Trochoid Color 2}
 
-Trying to prove this more general result works to our advantage as its shifts our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
+Trying to prove this more general result worked to our advantage as its shifted our focus from a global one (proving an equality of integrals) to  a local one (proving an equality of \emph{differential} arclengths). %This worked to our advantage.
 
 \begin{theorem9}
-As in Figure 2 with $s_1 = s_1(\phi)$ and $s_2=s_2(\phi)$ the respective arclengths of a prolate cycloid on the same and opposite sides of its rolling circle between inclination angles $0$ and $\phi$, and $s_3=s_3(\phi)$ the arclength of the ordinary cycloid between these same angles,
+As in Figure 2 with $s_1 = s_1(\phi)$ and $s_2=s_2(\phi)$ the respective arclengths of a prolate cycloid on the same and opposite sides of its rolling circle between inclination angles $0$ and $\phi$, and $s_3=s_3(\phi)$ the arclength of its sister cycloid between these same angles,
 \[
 s_1 - s_2 = s_3.
 \]
 \end{theorem9}
 
-Our proof of this theorem relies on the instantaneous center of rotation. Readers familiar with this idea might skip the next section and move directly to the proof.
+Our proof of this theorem relies heavily on the instantaneous center of rotation. We introduce this idea next. %Readers familiar with this idea might skip the next section and move directly to the proof.
 
 \section{Preliminaries}
 From the \emph{CarTalk} puzzler archives, May 15, 2006:
 
-{\bf RAY:} A car is traveling at 60 mph. You're standing by the side of the road, or lying on the road as the case may be. Can you name a part, or parts, of the car, that are not moving in relation to the road?
+\small{{\bf RAY:} A car is traveling at 60 mph. You're standing by the side of the road, or lying on the road as the case may be. Can you name a part, or parts, of the car, that are not moving in relation to the road?
 
 If needed, x-ray vision is permitted.
 
 That's Part A.
 
-Part 2-- and this is a hint-- what part of the car is traveling at 120 mph?
+Part 2-- and this is a hint-- what part of the car is traveling at 120 mph?}
 
-{\bf Answer:}
+%{\bf Answer:}
 
 %The bottom of every tire is moving at zero miles an hour with respect to the road. If that weren't the case, then the car would be in a skid.
 
@@ -99,19 +99,20 @@ Part 2-- and this is a hint-- what part of the car is traveling at 120 mph?
 
 
 
-It might seem counterintuitive that at any moment a rolling wheel is rotating \emph{not} about its center but about its point of contact with the ground. This statement has two implications for a point $P$ at rest in the reference frame of a rolling wheel, like a pebble stuck in a tire.
+It might seem counterintuitive that at any moment a rolling wheel is rotating \emph{not} about its center but about its point of contact with the ground. This point, the wheel's \emph{instantaneous center of rotation}, is the point in the reference frame of the rolling wheel momentarily at rest. We can see this from the path of the ordinary cycloid in Figure 1. When the tracing point bounces off the $x$-axis it reverses direction and must therefore come to a stop.
+
+At any moment, each point $P$ at rest in the reference frame of the rolling wheel,  like a pebble stuck in a tire, rotates about this center of rotation. We can therefore describe the velocity of such a point: 
+%This statement has two implications for a point $P$ at rest in the reference frame of a rolling wheel, like a pebble stuck in a tire.
 
 \begin{enumerate}
-\item The speed of $P$ is equal to the product $\rho \omega$ of the distance $PQ$ from $P$ to the point of contact and the rotation rate of the wheel.
+\item The speed of $P$ is equal to the product $\omega \rho$ of the wheel's rotation rate and the \emph{rotation arm} $\rho = PQ$ (the distance from $P$ to the center of rotation).
 
-\item The velocity of $P$ is orthogonal to segment $\overline{PQ}$.
+\item The velocity of $P$ is orthogonal to $\overline{PQ}$.
 \end{enumerate}
 
 %The photograph of a rolling wheel below gives some sense of (a); points on the spokes farther from the point of contact are moving faster and the spokes blur....
 
-The figure below shows the ordinary cycloid, the curve traced by a point $P$ fixed on the circumference of a rolling wheel. The marked angle $\theta$ is the wheel's angle of rotation measured from an arbitrary starting point, in this case when $\overline{QP}$ is vertical and $P$ coincides with $A$. Because of (b) above, the incination of the cycloid at $P$ (ie. the angle between the tangent and the horizontal) is equal to the measure of $\angle BQP$ (ie. the angle between the normal $\overline{PQ}$ and the vertical).
-
-The points on the cycloid are spaced at equal intervals of rotation and suggest that the speed $v= \rho (d\theta/dt)$ of the tracing point is proportional to its distance from the center of rotation.  
+The figure below shows the ordinary cycloid traced by a point $P$ fixed on the circumference of a rolling wheel. The marked angle $\theta$ is the wheel's rotation angle measured from an arbitrary starting point, in this case from the vertical when $P$ coincides with the top point $A$ of the cycloid. Because of (b) above, the incination of the cycloid at $P$ (ie. the angle between the tangent and the horizontal) is equal to the measure of $\angle BQP$ (ie. the angle between the normal $\overline{PQ}$ and the vertical). The points on the cycloid are spaced at equal intervals of rotation and suggest the speed $v= \rho (d\theta/dt)$ of the tracing point is proportional to the rotation arm $PQ$. %its distance from the center of rotation.  
 
 \begin{onlineOnly}
     \begin{center}
@@ -121,20 +122,20 @@ The points on the cycloid are spaced at equal intervals of rotation and suggest 
 
 \href{https://www.desmos.com/calculator/ilinb0qn7q}{Center of Rotation}
 
-To prove the arclength theorem, it will be helpful to think differentially. Then (a) is equivalent to saying that as the wheel turns through the differential angle $d\theta>0$, the tracing point traverses the differential distance $ds = \rho \, d\theta$. 
+To prove the arclength theorem, it helps to think differentially. Then (a) is equivalent to saying that as the wheel turns through the differential angle $d\theta>0$, the tracing point traverses the differential distance $ds = \rho \, d\theta$. 
 
 For the cycloid above, for example, traced by a point attached to a circle of radius $a$,
 \begin{align*}
      ds = &\rho \, d\theta \\
              &= 2a \cos\phi\, d\theta \\
-              &= 2a \cos(\theta/2)\, d\theta .  
+              &= 2a \cos \phi \, (2 \, d\phi) .  
 \end{align*}
 
 {\bf Remarks:} 
 \begin{enumerate}
-\item Integrating these differential arclengths shows the length of the cycloid from $A$ to $P$ is
+\item Adding these differential arclengths shows the length of the cycloid from $A$ to $P$ is
 \[
-       s = 4a\sin(\theta/2) = 4a \sin\phi %2 \text BP .
+      s =\int_0^\phi 4a\cos\phi \, d\phi = 4a\sin\phi .                    % s = \int_0^\theta (2 4a\sin(\theta/2) = 4a \sin\phi %2 \text BP .
 \]
 and equal to twice the length of chord $\overline{BP}$.
 
@@ -143,7 +144,26 @@ But my favorite way to prove this equality is to compare the differential arclen
     dc = (a\, d\theta) \cos \phi = ds/2.
 \]
 
-\item A pebble stuck in the wheel of a tire moves twice as fast as the wheel's axle at the top of its motion. For a dramatic demonstration, roll a book along two cylinders (oatmeal containers work well) and you can see the book advance twice as far the cyclinders.
+\item Ray's answer to the puzzler:
+
+\small{The bottom of every tire is moving at zero miles an hour with respect to the road. If that weren't the case, then the car would be in a skid.
+
+Imagine an ideal tire where one point is touching the road. That very point of the tire that's touching the road must not be moving in relation to the road. In fact, it is moving at zero miles an hour. And when you point it 180 degrees away, it has to be moving at twice that speed, or 120 miles an hour.}
+
+The conclusion seems suspect, but follows from the more general fact that the arithmetic mean (or more generally, the weighted average) of the velocities of two points at rest in the reference frame of the rolling wheel is equal to the velocity of the mean (or more generally the same weighted average) of these points.
+
+Roll a book on the tops of two cyinders (oatmeal containers work well) and you can see the book advacne twice as far as the cylinders, a convincing way to demonstrate that at the top of its motion a pebble stuck in a tire moves twice as fast as the axle. 
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{7miak40vna}{900}{600}   %bpvuhnhi35
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/7miak40vna}{Rolling Quaker Oats}
+
+%A pebble stuck in the wheel of a tire moves twice as fast as the wheel's axle at the top of its motion. For a dramatic demonstration, roll a book along two cylinders (oatmeal containers work well) and you can see the book advance twice as far the cyclinders.
 
 \end{enumerate}
 
